# edge-ai-suites

.github/workflows/: visual-search-qa-scans.yml
manufacturing-ai-suite/industrial-edge-insights-multimodal/: README.md  docker-compose.yml
manufacturing-ai-suite/industrial-edge-insights-multimodal/docs/user-guide/: index.md
metro-ai-suite/image-based-video-search/docs/user-guide/: how-to-deploy-helm.md
metro-ai-suite/metro-vision-ai-app-recipe/loitering-detection/docs/user-guide/: get-started.md
metro-ai-suite/metro-vision-ai-app-recipe/smart-parking/docs/user-guide/: get-started.md
metro-ai-suite/sensor-fusion-for-traffic-management/docker/: Dockerfile_TFCC.dockerfile
metro-ai-suite/sensor-fusion-for-traffic-management/docs/user-guide/: Advanced-User-Guide.md
metro-ai-suite/smart-traffic-intersection-agent/: setup.sh
metro-ai-suite/smart-traffic-intersection-agent/docker/: compose.yaml
metro-ai-suite/smart-traffic-intersection-agent/src/traffic-intelligence/: Dockerfile  __init__.py  docker-entrypoint.sh  main.py  pyproject.toml  run.py
metro-ai-suite/smart-traffic-intersection-agent/src/traffic-intelligence/api/: __init__.py
metro-ai-suite/smart-traffic-intersection-agent/src/traffic-intelligence/config/: traffic_intelligence.json
metro-ai-suite/smart-traffic-intersection-agent/src/traffic-intelligence/services/: __init__.py  data_aggregator.py  mqtt_service.py
metro-ai-suite/smart-traffic-intersection-agent/src/traffic-intelligence/ui/: app.py  auto_refresh.py  config.py  data_loader.py  models.py  ui_components.py  weather.py
robotics-ai-suite/components/adbscan/: README.md
robotics-ai-suite/components/adbscan/ROS2_node/launch/: play_demo_lidar_launch.py
robotics-ai-suite/components/collaborative-slam/: README.md
robotics-ai-suite/components/fast-mapping/: README.md
robotics-ai-suite/components/groundfloor/: README.md
robotics-ai-suite/components/its-planner/: README.md
robotics-ai-suite/components/multicam-demo/: README.md
robotics-ai-suite/components/object-detection/: README.md
robotics-ai-suite/components/simulations/: README.md
robotics-ai-suite/components/wandering/: README.md
robotics-ai-suite/pipelines/mpc-demo/: README.md
(+6 files in other folders)
